<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main_graph"
    app:startDestination="@id/fragmentHome">

    <fragment
        android:id="@+id/fragmentHome"
        android:name="fr.openium.testdrivingdistraction.ui.home.FragmentHome"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_fragmentHome_to_fragmentSettings"
            app:destination="@id/fragmentSettings" />
        <action
            android:id="@+id/action_fragmentHome_to_fragmentFakeEvents"
            app:destination="@id/fragmentFakeEvents" />
        <action
            android:id="@+id/action_fragmentHome_to_fragmentDetailList"
            app:destination="@id/fragmentDetailList" />
    </fragment>

    <fragment
        android:id="@+id/fragmentSettings"
        android:name="fr.openium.testdrivingdistraction.ui.settings.FragmentSettings"
        android:label="@string/settings_screen_title"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/fragmentFakeEvents"
        android:name="fr.openium.testdrivingdistraction.ui.fakeEvents.FragmentFakeEvents"
        android:label="@string/fake_events_screen_title"
        tools:layout="@layout/fragment_fake_events" />
    <fragment
        android:id="@+id/fragmentDetailList"
        android:name="fr.openium.testdrivingdistraction.ui.detailList.FragmentDetailList"
        android:label="@string/detail_list_screen_title"
        tools:layout="@layout/fragment_detail_list">
        <action
            android:id="@+id/action_fragmentDetail_to_fragmentDetail"
            app:destination="@id/fragmentDetail" />
    </fragment>
    <fragment
        android:id="@+id/fragmentDetail"
        android:name="fr.openium.testdrivingdistraction.ui.detail.FragmentDetail"
        android:label="@string/detail_screen_title"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="begin_date"
            app:argType="string" />
    </fragment>

</navigation>