<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbarHome"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayoutHomeHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:elevation="2dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonHomeStartTrip"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_margin="20dp"
                    android:text="@string/home_trip_start_recording"
                    app:backgroundTint="@color/colorGreen"
                    app:icon="@drawable/ic_play" />

                <TextView
                    android:id="@+id/textViewHomePermissions"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@color/colorPrimaryDark"
                    android:drawablePadding="12dp"
                    android:padding="12dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    app:drawableEndCompat="@drawable/ic_arrow_right"
                    app:drawableStartCompat="@drawable/ic_warning"
                    app:drawableTint="@color/colorOrange"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/home_permissions_missing" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorGrey2"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonHomeAddFakeEvents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/home_add_some_fake_events"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:icon="@drawable/ic_arrow_right"
                    app:iconGravity="end" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/home_add_some_markers"
                    android:textColor="@color/colorBlack" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp">

                    <Button
                        android:id="@+id/buttonHomeMarkerHangUp"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="@dimen/home_margin_big_button"
                        android:text="@string/home_marker_hang_up"
                        app:backgroundTint="@color/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toStartOf="@id/buttonHomeMarkerHandUsage"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/buttonHomeMarkerHandUsage"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="@dimen/home_margin_big_button"
                        android:layout_marginEnd="@dimen/home_margin_big_button"
                        android:text="@string/home_marker_hand_usage"
                        app:backgroundTint="@color/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toStartOf="@id/buttonHomeMarkerPickUp"
                        app:layout_constraintStart_toEndOf="@id/buttonHomeMarkerHangUp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/buttonHomeMarkerPickUp"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="@dimen/home_margin_big_button"
                        android:text="@string/home_marker_pick_up"
                        app:backgroundTint="@color/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/buttonHomeMarkerHandUsage"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>