<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey2"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbarFakeEvents"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp">

                <Button
                    android:id="@+id/buttonHomeFakeScreenOnOffToggle"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="@dimen/home_margin_big_button"
                    app:backgroundTint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toStartOf="@id/buttonHomeFakeScreenUnlockLockToggle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/fake_events_fake_screen_state_toggle_on" />

                <Button
                    android:id="@+id/buttonHomeFakeScreenUnlockLockToggle"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/home_margin_big_button"
                    android:text="@string/fake_events_fake_screen_unlock"
                    app:backgroundTint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/buttonHomeFakeScreenOnOffToggle"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp">

                <Button
                    android:id="@+id/buttonHomeFakeReceiveCall"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/fake_events_fake_call_received"
                    app:backgroundTint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:0.3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="invisible" />

                <Button
                    android:id="@+id/buttonHomeFakeHookCall"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="@dimen/home_margin_big_button"
                    android:text="@string/fake_events_fake_call_hooked"
                    android:visibility="invisible"
                    app:backgroundTint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@id/buttonHomeFakeReceiveCall"
                    app:layout_constraintEnd_toStartOf="@id/buttonHomeFakeNotHookCall"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/buttonHomeFakeReceiveCall"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/buttonHomeFakeNotHookCall"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/home_margin_big_button"
                    android:text="@string/fake_events_fake_call_not_hooked"
                    android:visibility="invisible"
                    app:backgroundTint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@id/buttonHomeFakeReceiveCall"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/buttonHomeFakeHookCall"
                    app:layout_constraintTop_toTopOf="@id/buttonHomeFakeReceiveCall"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp">

                <View
                    android:id="@+id/viewHomeFakeCallAndSMSHelper"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:0.3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonHomeFakeSendCall"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="@dimen/home_margin_big_button"
                    android:text="@string/fake_events_fake_call_sent"
                    app:backgroundTint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@id/viewHomeFakeCallAndSMSHelper"
                    app:layout_constraintEnd_toStartOf="@id/buttonHomeFakeReceiveSMS"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/viewHomeFakeCallAndSMSHelper" />

                <Button
                    android:id="@+id/buttonHomeFakeReceiveSMS"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/home_margin_big_button"
                    android:text="@string/fake_events_fake_sms_received"
                    app:backgroundTint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@id/viewHomeFakeCallAndSMSHelper"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/buttonHomeFakeSendCall"
                    app:layout_constraintTop_toTopOf="@id/viewHomeFakeCallAndSMSHelper" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp">

                <View
                    android:id="@+id/viewHomeFakeUSBAttachedDetachedHelper"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:0.3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonHomeFakeUSBAttached"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="@dimen/home_margin_big_button"
                    android:text="@string/fake_events_fake_usb_attached"
                    app:backgroundTint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@id/viewHomeFakeUSBAttachedDetachedHelper"
                    app:layout_constraintEnd_toStartOf="@id/buttonHomeFakeUSBDetached"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/viewHomeFakeUSBAttachedDetachedHelper" />

                <Button
                    android:id="@+id/buttonHomeFakeUSBDetached"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/home_margin_big_button"
                    android:text="@string/fake_events_fake_usb_detached"
                    app:backgroundTint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@id/viewHomeFakeUSBAttachedDetachedHelper"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/buttonHomeFakeUSBAttached"
                    app:layout_constraintTop_toTopOf="@id/viewHomeFakeUSBAttachedDetachedHelper" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>